--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   firebase_core: ^2.24.2
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
