--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_storage: ^11.2.3
+  image_picker: ^0.8.9
+  geolocator: ^9.0.2
+  geocoding: ^2.1.1
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   firebase_core: ^2.24.2
   cached_network_image: ^3.3.0
+  image_picker_web: ^3.1.1
 
 dev_dependencies:
   flutter_test:
