--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^2.24.2
   cached_network_image: ^3.3.0
   image_picker_web: ^3.1.1
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
